GNOME Bugzilla – Bug 744585
vtenc: Crash when going to background
Last modified: 2015-02-16 10:42:14 UTC
Hi, While testing our app, we've encountered crash on running pipeline with vtenc, when going to background. Note: App has Background capabilities enabled. Pausing a possible way to overcome this, but not a solution for us, since we perform live streaming. Pipeline: avfvideosrc ! video/x-raw,format=NV12,width=960,height=540,framerate=30/1 ! tee name=tp tp. ! queue ! autovideosink tp. ! queue ! videoconvert ! vtenc_h264 bitrate=2500 max-keyframe-interval-duration=2000000000 max-keyframe-interval=60 allow-frame-reordering=false realtime=true quality=0.5 ! h264parse ! video/x-h264,framerate=30/1,width=960,height=540,stream-format=(string)avc,level=(string)3.1,profile=(string)main ! queue ! mux. autoaudiosrc ! audioconvert ! voaacenc bitrate=64000 ! aacparse ! queue max-size-buffers=0 max-size-time=0 max-size-bytes=0 ! flvmux streamable=true name=mux ! queue max-size-buffers=0 max-size-time=0 max-size-bytes=0 ! rtmpsink location='rtmp://...... live=1' Here's stack trace: 0CoreFoundation0x22e9bd3c CFNumberGetValue + 76 1Trace0x002994f8 gst_vtenc_handle_frame (vtenc.c:1011) 2Trace0x00d03ce0 gst_video_encoder_chain (gstvideoencoder.c:1452) 3Trace0x00c87298 gst_pad_chain_data_unchecked (gstpad.c:3830) 4Trace0x00c87930 gst_pad_push_data (gstpad.c:4063) 5Trace0x00c17058 gst_base_transform_chain (gstbasetransform.c:2260) 6Trace0x00c87298 gst_pad_chain_data_unchecked (gstpad.c:3830) 7Trace0x00c87930 gst_pad_push_data (gstpad.c:4063) 8Trace0x0031f750 gst_queue_loop (gstqueue.c:1169) 9Trace0x00c99838 gst_task_func (gsttask.c:316) 10Trace0x00b23e90 g_thread_pool_thread_proxy (gthreadpool.c:307) 11Trace0x00b26d78 g_thread_proxy (gthread.c:764)
This should fix it. Please reopen otherwise :) Thanks for reporting commit 0c9f35653f77e1cab32e7014a32e3c8f7fa8bbeb Author: Sebastian Dröge <sebastian@centricular.com> Date: Mon Feb 16 12:35:09 2015 +0200 vtenc: Check if VTSessionCopyProperty() succeeds before using the result https://bugzilla.gnome.org/show_bug.cgi?id=744585
Great! Thank you Sebastian. We'll verify this one soon.