vtenc: Check if VTSessionCopyProperty() succeeds before using the result

https://bugzilla.gnome.org/show_bug.cgi?id=744585